Tab indentation and meta cleanup

--- a/gtsr.html
+++ b/gtsr.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>Solar Racing</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Nicholas Selby, Former Chief Engineer of the Georgia Tech Solar Racing Team">
-    <link rel="canonical" href="https://rupumped.github.io/gtsr.html">
+	<link rel="canonical" href="https://rupumped.github.io/gtsr.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,63 +23,63 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/gtsr-cover.jpg" alt="A physical network implemented on breadboards">
-            <h1>Solar Racing</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/gtsr-cover.jpg" alt="A physical network implemented on breadboards">
+			<h1>Solar Racing</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">Automotive Technology</div>
-                <div class="bullet"></div>
-                <div class="skill">Aerodynamics</div>
-                <div class="bullet"></div>
-                <div class="skill">Optimization</div>
-                <div class="bullet"></div>
-                <div class="skill">Leadership</div>
-                <div class="bullet"></div>
-                <div class="skill">Composites</div>
-                <div class="bullet"></div>
-                <div class="skill">Structures</div>
-                <div class="bullet"></div>
-                <div class="skill">FEA</div>
-                <div class="bullet"></div>
-                <div class="skill">CNC Machining</div>
-                <div class="bullet"></div>
-                <div class="skill">MIG/TIG Welding</div>
-                <div class="bullet"></div>
-                <div class="skill">C/C++</div>
-                <div class="bullet"></div>
-                <div class="skill">MATLAB</div>
-                <div class="bullet"></div>
-                <div class="skill">PCB Design</div>
-                <div class="bullet"></div>
-                <div class="skill">CFD</div>
-                <div class="bullet"></div>
-                <div class="skill">CAD</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Automotive Technology</div>
+				<div class="bullet"></div>
+				<div class="skill">Aerodynamics</div>
+				<div class="bullet"></div>
+				<div class="skill">Optimization</div>
+				<div class="bullet"></div>
+				<div class="skill">Leadership</div>
+				<div class="bullet"></div>
+				<div class="skill">Composites</div>
+				<div class="bullet"></div>
+				<div class="skill">Structures</div>
+				<div class="bullet"></div>
+				<div class="skill">FEA</div>
+				<div class="bullet"></div>
+				<div class="skill">CNC Machining</div>
+				<div class="bullet"></div>
+				<div class="skill">MIG/TIG Welding</div>
+				<div class="bullet"></div>
+				<div class="skill">C/C++</div>
+				<div class="bullet"></div>
+				<div class="skill">MATLAB</div>
+				<div class="bullet"></div>
+				<div class="skill">PCB Design</div>
+				<div class="bullet"></div>
+				<div class="skill">CFD</div>
+				<div class="bullet"></div>
+				<div class="skill">CAD</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <p>During the last two years as an undergraduate student at Georgia Tech, I had the honor of serving as the Chief Engineer of the Georgia Tech Solar Racing team. I led over ninety interdisciplinary students to design, build, and race a solar-powered car from scratch. My job was both managerial and technical: a single day could include closing out an iteration of fluids modeling on the aerobody, teaching a group of my peers how to weld structural tubing, and taking meetings with sponsors to update them on our progress. The activity allowed me to practice using engineering concepts discussed in classes like Deformable Bodies and System Dynamics and teach others to do the same. During my tenure as chief engineer, we doubled our recruitment both years by implementing a revolutionary training curriculum, increased fundraising tenfold by formalizing Business and Community Outreach arms of the organization, and brought a team that completed one lap at Nationals to a team that completed 27.</p>
-        
-        <p>Check out the team's current progress on the <a rel="external" href="http://solarracing.gatech.edu/" target="_blank">GT Solar Racing homepage</a>.</p>
-    </main>
+		<p>During the last two years as an undergraduate student at Georgia Tech, I had the honor of serving as the Chief Engineer of the Georgia Tech Solar Racing team. I led over ninety interdisciplinary students to design, build, and race a solar-powered car from scratch. My job was both managerial and technical: a single day could include closing out an iteration of fluids modeling on the aerobody, teaching a group of my peers how to weld structural tubing, and taking meetings with sponsors to update them on our progress. The activity allowed me to practice using engineering concepts discussed in classes like Deformable Bodies and System Dynamics and teach others to do the same. During my tenure as chief engineer, we doubled our recruitment both years by implementing a revolutionary training curriculum, increased fundraising tenfold by formalizing Business and Community Outreach arms of the organization, and brought a team that completed one lap at Nationals to a team that completed 27.</p>
+		
+		<p>Check out the team's current progress on the <a rel="external" href="http://solarracing.gatech.edu/" target="_blank">GT Solar Racing homepage</a>.</p>
+	</main>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
