--- a/lowtemp.html
+++ b/lowtemp.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>Quantum Computing</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Low Temperature Physics for Quantum Computing">
-    <link rel="canonical" href="https://rupumped.github.io/lowtemp.html">
+	<link rel="canonical" href="https://rupumped.github.io/lowtemp.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,117 +23,117 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
-            <h1>Low Temperature Physics for Quantum Computing</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
+			<h1>Low Temperature Physics for Quantum Computing</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">Design</div>
-                <div class="bullet"></div>
-                <div class="skill">Quantum Physics</div>
-                <div class="bullet"></div>
-                <div class="skill">Simulation</div>
-                <div class="bullet"></div>
-                <div class="skill">CAD</div>
-                <div class="bullet"></div>
-                <div class="skill">CNC Machining</div>
-                <div class="bullet"></div>
-                <div class="skill">Rapid Prototyping</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Design</div>
+				<div class="bullet"></div>
+				<div class="skill">Quantum Physics</div>
+				<div class="bullet"></div>
+				<div class="skill">Simulation</div>
+				<div class="bullet"></div>
+				<div class="skill">CAD</div>
+				<div class="bullet"></div>
+				<div class="skill">CNC Machining</div>
+				<div class="bullet"></div>
+				<div class="skill">Rapid Prototyping</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <p>While working as a researcher at Sandia National Laboratories under the direction of Dr. Wei Pan, I designed, constructed, and characterized a biaxial sample rotation stage for use in cryogenic systems for orientation-dependent studies of anisotropic electronic transport phenomena at low temperatures and high magnetic fields.​​</p>
+		<p>While working as a researcher at Sandia National Laboratories under the direction of Dr. Wei Pan, I designed, constructed, and characterized a biaxial sample rotation stage for use in cryogenic systems for orientation-dependent studies of anisotropic electronic transport phenomena at low temperatures and high magnetic fields.​​</p>
 
-        <section>
-            <h2>Motivation</h2>
-            <p>Quantum computing relies upon the <i>fractional quantum Hall effect</i> (FQHE), a phenomenon of 2D electron planes in which energy levels plateau at some precise fractional values of energy states. Just like in a simple, educational experiment involving the ordinary Hall effect you may remember from an introductory physics class, the FQHE is often<img class="img-right" src="project-pages/lowtemp-motivation.jpg" title="Y. Colombe/NIST" alt="Apparatus used in quantum computing experiments"> investigated by tilting an electrical conductor in a magnetic field. Unlike the ordinary Hall effect, the FQHE is very faint, and can only be observed in thin semiconductor materials. The use of semiconductor materials illuminates another exciting possibility.</p>
-            <p>Unlike metals, semiconductors are often anisotropic, meaning that measuring a physical property along one dimension of a material can have a completely different result if measured along a different dimension. However, researchers of FQHE had no way to perform an experiment to confirm whether or not this important phenomenon could be an anisotropic property of the semiconductors which they studied. To quote one of the seminal works in the field:</p>
-            <blockquote>Previous tilt experiments in the regime of the FQHE always <b>assumed that only the angle of the magnetic field with respect to the sample normal mattered</b> to the transport behavior, whereas the azimuth of the field, i.e., the direction of the so-created in-plane magnetic field…was immaterial. <b>This assumption obviously needs to be scrutinized and justified.</b><br>from <q>Strongly Anisotropic Electronic Transport at Landau Level Filling Factor ν = 9/2 and ν = 5/2 under a Tilted Magnetic Field</q> by Pan, et al.</blockquote>
-            <p>So I set out to design a device which could perform such an experiment.</p>
-        </section>
+		<section>
+			<h2>Motivation</h2>
+			<p>Quantum computing relies upon the <i>fractional quantum Hall effect</i> (FQHE), a phenomenon of 2D electron planes in which energy levels plateau at some precise fractional values of energy states. Just like in a simple, educational experiment involving the ordinary Hall effect you may remember from an introductory physics class, the FQHE is often<img class="img-right" src="project-pages/lowtemp-motivation.jpg" title="Y. Colombe/NIST" alt="Apparatus used in quantum computing experiments"> investigated by tilting an electrical conductor in a magnetic field. Unlike the ordinary Hall effect, the FQHE is very faint, and can only be observed in thin semiconductor materials. The use of semiconductor materials illuminates another exciting possibility.</p>
+			<p>Unlike metals, semiconductors are often anisotropic, meaning that measuring a physical property along one dimension of a material can have a completely different result if measured along a different dimension. However, researchers of FQHE had no way to perform an experiment to confirm whether or not this important phenomenon could be an anisotropic property of the semiconductors which they studied. To quote one of the seminal works in the field:</p>
+			<blockquote>Previous tilt experiments in the regime of the FQHE always <b>assumed that only the angle of the magnetic field with respect to the sample normal mattered</b> to the transport behavior, whereas the azimuth of the field, i.e., the direction of the so-created in-plane magnetic field…was immaterial. <b>This assumption obviously needs to be scrutinized and justified.</b><br>from <q>Strongly Anisotropic Electronic Transport at Landau Level Filling Factor ν = 9/2 and ν = 5/2 under a Tilted Magnetic Field</q> by Pan, et al.</blockquote>
+			<p>So I set out to design a device which could perform such an experiment.</p>
+		</section>
 
-        <section>
-            <h2>Design</h2>
-            <p>According to literature, such a device must be able to tolerate high magnetic fields on the order of 30 teslas (one million times greater than that of the Earth's magnetic field), have a small enough power dissipation to be able to function at temperatures around 0.01°K (extremely close to absolute zero), and be able to rotate a sample in increments of 0.01° (how far the hour hand on a clock moves in one second), all within a cooling tank space approximately the size of a shot glass and filled with liquid helium.</p>
-            <table>
-                <caption>*Our generator could only produce a magnetic field up to 33 T<br>**Power dissipation was undetectably small</caption>
-                <tr>
-                    <th>Parameter</th>
-                    <th>State-of-the-Art</th>
-                    <th>My Design</th>
-                </tr>
-                <tr>
-                    <td>Axes of Rotation</td>
-                    <td>1</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>Max Magnetic Field</td>
-                    <td>33 T</td>
-                    <td>33+ T*</td>
-                </tr>
-                <tr>
-                    <td>Power Dissipation</td>
-                    <td>100 µW</td>
-                    <td>0 µW**</td>
-                </tr>
-                <tr>
-                    <td>Min Operating Temp.</td>
-                    <td>0.05° mK</td>
-                    <td>0.01° mK</td>
-                </tr>
-                <tr>
-                    <td>Resolution</td>
-                    <td>0.01°</td>
-                    <td>0.01​°</td>
-                </tr>
-            </table>
-            <p>My design was similar to that of a puppet. High precision linear actuators outside the tank raised and lowered strings which, in turn, rotated the sample. The design was entirely machined out of stainless steel and brass so as to withstand high magnetic fields and avoid superconductivity at low temperatures. Because the strings were the only coupling between the sample stage and the rest of the device, the sample stage was effectively thermally isolated from the heat being generated outside the tank, allowing the device to work at extremely low temperatures. Finally, just like raising one arm on a puppet does not affect the other arm or legs, dual linear actuators could adjust the sample orientation about both axes independently.</p>
-            <div class="centered section">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a-O0BJFlavk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </section>
+		<section>
+			<h2>Design</h2>
+			<p>According to literature, such a device must be able to tolerate high magnetic fields on the order of 30 teslas (one million times greater than that of the Earth's magnetic field), have a small enough power dissipation to be able to function at temperatures around 0.01°K (extremely close to absolute zero), and be able to rotate a sample in increments of 0.01° (how far the hour hand on a clock moves in one second), all within a cooling tank space approximately the size of a shot glass and filled with liquid helium.</p>
+			<table>
+				<caption>*Our generator could only produce a magnetic field up to 33 T<br>**Power dissipation was undetectably small</caption>
+				<tr>
+					<th>Parameter</th>
+					<th>State-of-the-Art</th>
+					<th>My Design</th>
+				</tr>
+				<tr>
+					<td>Axes of Rotation</td>
+					<td>1</td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td>Max Magnetic Field</td>
+					<td>33 T</td>
+					<td>33+ T*</td>
+				</tr>
+				<tr>
+					<td>Power Dissipation</td>
+					<td>100 µW</td>
+					<td>0 µW**</td>
+				</tr>
+				<tr>
+					<td>Min Operating Temp.</td>
+					<td>0.05° mK</td>
+					<td>0.01° mK</td>
+				</tr>
+				<tr>
+					<td>Resolution</td>
+					<td>0.01°</td>
+					<td>0.01​°</td>
+				</tr>
+			</table>
+			<p>My design was similar to that of a puppet. High precision linear actuators outside the tank raised and lowered strings which, in turn, rotated the sample. The design was entirely machined out of stainless steel and brass so as to withstand high magnetic fields and avoid superconductivity at low temperatures. Because the strings were the only coupling between the sample stage and the rest of the device, the sample stage was effectively thermally isolated from the heat being generated outside the tank, allowing the device to work at extremely low temperatures. Finally, just like raising one arm on a puppet does not affect the other arm or legs, dual linear actuators could adjust the sample orientation about both axes independently.</p>
+			<div class="centered section">
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a-O0BJFlavk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</section>
 
-        <section>
-            <h2>Results</h2>
-            <p>The device worked. We were able to deploy a sample in a cryogenic tank and rotate it about both axes independently in extreme cold and high magnetic field. Our results were published in <i>Review of Scientific Instruments</i>, a journal of the American Institute of Physics. To learn more about the project, <a href="homepage/dualaxis.pdf" download target="_blank">read our paper</a>.</p>
-        </section>
+		<section>
+			<h2>Results</h2>
+			<p>The device worked. We were able to deploy a sample in a cryogenic tank and rotate it about both axes independently in extreme cold and high magnetic field. Our results were published in <i>Review of Scientific Instruments</i>, a journal of the American Institute of Physics. To learn more about the project, <a href="homepage/dualaxis.pdf" download target="_blank">read our paper</a>.</p>
+		</section>
 
-        <img class="img-full-width" src="project-pages/lowtemp-g4.jpg" alt="Me shaking hands with Dr. Wei Pan">
-        <div class="gallery">
-            <a href="project-pages/lowtemp-g0.jpg" target="_blank">
-                <img src="project-pages/lowtemp-g0.jpg" alt="Diagram of my biaxial rotation stage">
-            </a>
-            <a href="project-pages/lowtemp-g1.jpg" target="_blank">
-                <img src="project-pages/lowtemp-g1.jpg" alt="Diagram of the controller of my biaxial rotation stage">
-            </a>
-            <a href="project-pages/lowtemp-g2.jpg" target="_blank">
-                <img src="project-pages/lowtemp-g2.jpg" alt="Graph showing dip in R_{xx} at v=2">
-            </a>
-            <a href="project-pages/lowtemp-g3.jpg" target="_blank">
-                <img src="project-pages/lowtemp-g3.jpg" alt="Picture of my biaxial rotation stage">
-            </a>
-        </div>
-    </main>
-    
+		<img class="img-full-width" src="project-pages/lowtemp-g4.jpg" alt="Me shaking hands with Dr. Wei Pan">
+		<div class="gallery">
+			<a href="project-pages/lowtemp-g0.jpg" target="_blank">
+				<img src="project-pages/lowtemp-g0.jpg" alt="Diagram of my biaxial rotation stage">
+			</a>
+			<a href="project-pages/lowtemp-g1.jpg" target="_blank">
+				<img src="project-pages/lowtemp-g1.jpg" alt="Diagram of the controller of my biaxial rotation stage">
+			</a>
+			<a href="project-pages/lowtemp-g2.jpg" target="_blank">
+				<img src="project-pages/lowtemp-g2.jpg" alt="Graph showing dip in R_{xx} at v=2">
+			</a>
+			<a href="project-pages/lowtemp-g3.jpg" target="_blank">
+				<img src="project-pages/lowtemp-g3.jpg" alt="Picture of my biaxial rotation stage">
+			</a>
+		</div>
+	</main>
+	
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
