--- a/rfly.html
+++ b/rfly.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>RFly</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="RFly">
-    <link rel="canonical" href="https://rupumped.github.io/rfly.html">
+	<link rel="canonical" href="https://rupumped.github.io/rfly.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,57 +23,57 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/rfly-cover.jpg" alt="Drone with a mounted PCB">
-            <h1>RFly</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/rfly-cover.jpg" alt="Drone with a mounted PCB">
+			<h1>RFly</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">C/C++</div>
-                <div class="bullet"></div>
-                <div class="skill">Wireless Networking</div>
-                <div class="bullet"></div>
-                <div class="skill">UAVs</div>
-                <div class="bullet"></div>
-                <div class="skill">Signal Processing</div>
-                <div class="bullet"></div>
-                <div class="skill">MATLAB</div>
-                <div class="bullet"></div>
-                <div class="skill">PCB Design</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">C/C++</div>
+				<div class="bullet"></div>
+				<div class="skill">Wireless Networking</div>
+				<div class="bullet"></div>
+				<div class="skill">UAVs</div>
+				<div class="bullet"></div>
+				<div class="skill">Signal Processing</div>
+				<div class="bullet"></div>
+				<div class="skill">MATLAB</div>
+				<div class="bullet"></div>
+				<div class="skill">PCB Design</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <p class="disclaimer">The following is from the <a rel="external" href="https://www.media.mit.edu/projects/wireless-sensing-for-drones-agile-robots-robotics/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</p>
+		<p class="disclaimer">The following is from the <a rel="external" href="https://www.media.mit.edu/projects/wireless-sensing-for-drones-agile-robots-robotics/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</p>
 
-        <p>Can drones find missing items? Every year, companies lose billions of dollars due to misplaced items and faulty inventory records in their warehouses. Consider that the smallest Walmart warehouse is larger than 17 football fields, making it impossible to keep track of all items in the warehouse.</p>
+		<p>Can drones find missing items? Every year, companies lose billions of dollars due to misplaced items and faulty inventory records in their warehouses. Consider that the smallest Walmart warehouse is larger than 17 football fields, making it impossible to keep track of all items in the warehouse.</p>
 
-        <p>​To overcome this challenge, we introduce RFly, a drone-based wireless system that can scan and locate items in warehouses. The system leverages cheap, battery-free RFID (Radio Frequency Identifier) stickers, which are attached to every item in the warehouse similar to barcodes. These RFIDs power up and respond with a unique identifier when commanded by a wireless device called a reader. To scan a warehouse, a drone operator dispatches a small, inexpensive, and safe drone which flies throughout a warehouse, cataloging and localizing all the RFIDs in a warehouse. The video below shows how the system operates.</p>
+		<p>​To overcome this challenge, we introduce RFly, a drone-based wireless system that can scan and locate items in warehouses. The system leverages cheap, battery-free RFID (Radio Frequency Identifier) stickers, which are attached to every item in the warehouse similar to barcodes. These RFIDs power up and respond with a unique identifier when commanded by a wireless device called a reader. To scan a warehouse, a drone operator dispatches a small, inexpensive, and safe drone which flies throughout a warehouse, cataloging and localizing all the RFIDs in a warehouse. The video below shows how the system operates.</p>
 
-        <div class="centered section">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fvPR09noiL8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+		<div class="centered section">
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fvPR09noiL8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 
-        <p>The key innovation in designing RFly is a new relay that enables cataloging and locating battery-free RFIDs over a wide area. Specifically, due to their battery-free nature, RFIDs are crippled by their communication range. RFly’s relay can seamlessly integrate with an existing RFID infrastructure and extend the coverage area of every reader by a 100x. Moreover, RFly’s location-finding algorithm collects wireless responses from every RFID along its flight path, then combines these responses to pinpoint the RFID’s location, achieving an accuracy of around a foot. These capabilities enable RFly to scan for objects over a wide area and pinpoint their location to the actual shelf they are placed on.</p>
+		<p>The key innovation in designing RFly is a new relay that enables cataloging and locating battery-free RFIDs over a wide area. Specifically, due to their battery-free nature, RFIDs are crippled by their communication range. RFly’s relay can seamlessly integrate with an existing RFID infrastructure and extend the coverage area of every reader by a 100x. Moreover, RFly’s location-finding algorithm collects wireless responses from every RFID along its flight path, then combines these responses to pinpoint the RFID’s location, achieving an accuracy of around a foot. These capabilities enable RFly to scan for objects over a wide area and pinpoint their location to the actual shelf they are placed on.</p>
 
-        <p>​To learn more about RFly, <a href="homepage/rfly.pdf" download>read our paper!</a></p>
-    </main>
+		<p>​To learn more about RFly, <a href="homepage/rfly.pdf" download>read our paper!</a></p>
+	</main>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
