--- a/about.html
+++ b/about.html
@@ -2,69 +2,68 @@
 <html lang="en">
 <head>
 	<title>About Me</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="About Nicholas Selby">
-    <link rel="canonical" href="https://rupumped.github.io/about.html">
+	<link rel="canonical" href="https://rupumped.github.io/about.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet"> 
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet"> 
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a class="active-link" href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a class="active-link" href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div id="quote-container" class="section">
-            <div id="quote-symbol">"</div>
-            <div id="quote">
-                <div id="quote-words">
-                    The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
-                </div>
-                <div id="quote-citation">
-                    ― Horace Walpole
-                </div>
-            </div>
-        </div>
+	<main>
+		<div id="quote-container" class="section">
+			<div id="quote-symbol">"</div>
+			<div id="quote">
+				<div id="quote-words">
+					The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
+				</div>
+				<div id="quote-citation">
+					― Horace Walpole
+				</div>
+			</div>
+		</div>
 
-        <div id="bio" class="section">
-            <p><img id="img-dog" class="img-right" src="about/dog.jpg" alt="Me playing with a dog">I am Nick Selby, and I am passionate about engineering that centers users and their communities. I have always wanted to "be an inventor when I grow up." I started my first company at age 18 coding and selling applications for graphing calculators to help high school and college students with their math homework. Since then, I have gotten to do research in quantum computing, build a solar-powered racecar, and travel internationally to teach students how to use engineering to improve their communities.</p>
+		<div id="bio" class="section">
+			<p><img id="img-dog" class="img-right" src="about/dog.jpg" alt="Me playing with a dog">I am Nick Selby, and I am passionate about engineering that centers users and their communities. I have always wanted to "be an inventor when I grow up." I started my first company at age 18 coding and selling applications for graphing calculators to help high school and college students with their math homework. Since then, I have gotten to do research in quantum computing, build a solar-powered racecar, and travel internationally to teach students how to use engineering to improve their communities.</p>
 
-            <p>Watching someone's face light up in newfound comprehension delights me. I am privileged to have been hired as a Teaching Assistant for computer science, physics, and robotics courses at <img id="img-teaching" class="img-left" src="about/teaching.jpg" alt="Me teaching a group of students how to solder">undergraduate and graduate levels, and was honored when my students' course evaluations ranked me in the 99th percentile of all instructors at Georgia Tech. My passion for teaching also helps me be a better leader. In my role as Director of Engineering for an African solar minigrid company, I lead the engineering and construction of solar minigrids across Africa. Often, this means teaching engineering analysis and power electronics operation to my employees and local technicians we hire. Regardless of where I work, I grow the knowledge base of my coworkers and teammates.</p>
+			<p>Watching someone's face light up in newfound comprehension delights me. I am privileged to have been hired as a Teaching Assistant for computer science, physics, and robotics courses at <img id="img-teaching" class="img-left" src="about/teaching.jpg" alt="Me teaching a group of students how to solder">undergraduate and graduate levels, and was honored when my students' course evaluations ranked me in the 99th percentile of all instructors at Georgia Tech. My passion for teaching also helps me be a better leader. In my role as Director of Engineering for an African solar minigrid company, I lead the engineering and construction of solar minigrids across Africa. Often, this means teaching engineering analysis and power electronics operation to my employees and local technicians we hire. Regardless of where I work, I grow the knowledge base of my coworkers and teammates.</p>
 
-            <p>When I'm not building something, I enjoy public speaking, hiking, and traveling. Public speaking is my artistic outlet. The act of speaking to a crowd, be it professionally, motivationally, or theatrically, brings me joy. I have had the privilege of delivering presentations around the world to audiences that sometimes number in the thousands. Whatever the occasion, I am honored by the responsibility the stage gives me to teach, inspire, and delight.</p>
+			<p>When I'm not building something, I enjoy public speaking, hiking, and traveling. Public speaking is my artistic outlet. The act of speaking to a crowd, be it professionally, motivationally, or theatrically, brings me joy. I have had the privilege of delivering presentations around the world to audiences that sometimes number in the thousands. Whatever the occasion, I am honored by the responsibility the stage gives me to teach, inspire, and delight.</p>
 
-            <img id="img-fun" class="img-full-width" src="about/fun.png" alt="three images side-by-side: me on a mountain in Antarctica, me in a rice paddy in China, and me in the foothills in Arizona">
+			<img id="img-fun" class="img-full-width" src="about/fun.png" alt="three images side-by-side: me on a mountain in Antarctica, me in a rice paddy in China, and me in the foothills in Arizona">
 
-            <p>Many of my favorite adventures happen while traveling. I've kayaked in Scotland, backpacked in Patagonia, farmed rice paddies in China, and mountaineered in Antarctica. After trekking through otherworldly landscapes, I further the adventure by enjoying the local cuisine—the spicier the better—and discussing culture, politics, and philosophy with people I meet. My goal is to develop a strong engineering skillset and collaborate with researchers and entrepreneurs around the world to solve problems at the community level.</p>
+			<p>Many of my favorite adventures happen while traveling. I've kayaked in Scotland, backpacked in Patagonia, farmed rice paddies in China, and mountaineered in Antarctica. After trekking through otherworldly landscapes, I further the adventure by enjoying the local cuisine—the spicier the better—and discussing culture, politics, and philosophy with people I meet. My goal is to develop a strong engineering skillset and collaborate with researchers and entrepreneurs around the world to solve problems at the community level.</p>
 
-            <p>Send me an email if you have an interesting project on which you would like to collaborate. I am always ready for another adventure.</p>
+			<p>Send me an email if you have an interesting project on which you would like to collaborate. I am always ready for another adventure.</p>
 
-            <img id="img-final" class="image-full-width" src="about/final.jpg" alt="Me looking over Patagonia">
-        </div>
-    </main>
+			<img id="img-final" class="image-full-width" src="about/final.jpg" alt="Me looking over Patagonia">
+		</div>
+	</main>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
