--- a/business-card.html
+++ b/business-card.html
@@ -2,62 +2,61 @@
 <html lang="en">
 <head>
 	<title>Nicholas Selby, PhD</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Business card of Nicholas Selby">
-    <link rel="canonical" href="https://rupumped.github.io/business-card.html">
+	<link rel="canonical" href="https://rupumped.github.io/business-card.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="business-card/business-card.css">
+	<link rel="stylesheet" type="text/css" href="business-card/business-card.css">
 </head>
 <body>
-    <div id="bg-container">
-        <div id="blue-triangle"></div>
-        <div id="black-triangle"></div>
-        <img id="bg-img" alt="Solar panels" src="business-card/bg-img.jpg">
-    </div>
-    
+	<div id="bg-container">
+		<div id="blue-triangle"></div>
+		<div id="black-triangle"></div>
+		<img id="bg-img" alt="Solar panels" src="business-card/bg-img.jpg">
+	</div>
+	
 	<header>
-        <img alt="Renewvia Logo" src="business-card/rsa-logo.png">
-        <div id="name">Nicholas Selby</div>
-        <div id="job">Director of Engineering at Renewvia</div>
-    </header>
+		<img alt="Renewvia Logo" src="business-card/rsa-logo.png">
+		<div id="name">Nicholas Selby</div>
+		<div id="job">Director of Engineering at Renewvia</div>
+	</header>
 
-    <main>
-        <a rel="author" class="contact" href="mailto:nicholas.selby@renewvia.com" target="_blank">
-            <img alt="Email icon" src="business-card/icon-email.jpg">
-            <p>nicholas.selby@renewvia.com</p>
-        </a>
+	<main>
+		<a rel="author" class="contact" href="mailto:nicholas.selby@renewvia.com" target="_blank">
+			<img alt="Email icon" src="business-card/icon-email.jpg">
+			<p>nicholas.selby@renewvia.com</p>
+		</a>
 
-        <a class="contact" href="https://rupumped.github.io/" target="_blank">
-            <img alt="Website icon" src="business-card/icon-website.jpg">
-            <p>rupumped.github.io</p>
-        </a>
+		<a class="contact" href="https://rupumped.github.io/" target="_blank">
+			<img alt="Website icon" src="business-card/icon-website.jpg">
+			<p>rupumped.github.io</p>
+		</a>
 
-        <a rel="external" class="contact" href="https://goo.gl/maps/MaFEdxeVpEvhab946" target="_blank">
-            <img alt="Location icon" src="business-card/icon-loc.jpg">
-            <p>PO Box 14805, Nairobi, Kenya</p>
-        </a>
+		<a rel="external" class="contact" href="https://goo.gl/maps/MaFEdxeVpEvhab946" target="_blank">
+			<img alt="Location icon" src="business-card/icon-loc.jpg">
+			<p>PO Box 14805, Nairobi, Kenya</p>
+		</a>
 
-        <a class="contact" href="business-card/qr.png" target="_blank">
-            <img alt="QR code icon" src="business-card/icon-qr.jpg">
-            <p>Get shareable QR code</p>
-        </a>
+		<a class="contact" href="business-card/qr.png" target="_blank">
+			<img alt="QR code icon" src="business-card/icon-qr.jpg">
+			<p>Get shareable QR code</p>
+		</a>
 
-        <textarea id="notes" name="notes" placeholder="Write a note here for later. For example, 'Nick builds solar minigrids in Africa and is excited to collaborate!'" rows="4"></textarea>
-    </main>
+		<textarea id="notes" name="notes" placeholder="Write a note here for later. For example, 'Nick builds solar minigrids in Africa and is excited to collaborate!'" rows="4"></textarea>
+	</main>
 </body>
 </html>
