--- a/capstone.html
+++ b/capstone.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>Aerial Mapping</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
-	<meta name="description" content="​Aerial Mapping System for Urban Environments">
-    <link rel="canonical" href="https://rupumped.github.io/capstone.html">
+	<meta name="description" content="Aerial Mapping System for Urban Environments">
+	<link rel="canonical" href="https://rupumped.github.io/capstone.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,98 +23,98 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/capstone-cover.jpg" alt="A drone flying in the sky">
-            <h1>​Aerial Mapping System for Urban Environments</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/capstone-cover.jpg" alt="A drone flying in the sky">
+			<h1>​Aerial Mapping System for Urban Environments</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">UAVs</div>
-                <div class="bullet"></div>
-                <div class="skill">Python</div>
-                <div class="bullet"></div>
-                <div class="skill">Optimization</div>
-                <div class="bullet"></div>
-                <div class="skill">HTML/CSS/JavaScript</div>
-                <div class="bullet"></div>
-                <div class="skill">Image Processing</div>
-                <div class="bullet"></div>
-                <div class="skill">MATLAB</div>
-                <div class="bullet"></div>
-                <div class="skill">GIS</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">UAVs</div>
+				<div class="bullet"></div>
+				<div class="skill">Python</div>
+				<div class="bullet"></div>
+				<div class="skill">Optimization</div>
+				<div class="bullet"></div>
+				<div class="skill">HTML/CSS/JavaScript</div>
+				<div class="bullet"></div>
+				<div class="skill">Image Processing</div>
+				<div class="bullet"></div>
+				<div class="skill">MATLAB</div>
+				<div class="bullet"></div>
+				<div class="skill">GIS</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <div class="centered section">
-            <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/OeNuO3kTnmA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+		<div class="centered section">
+			<iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/OeNuO3kTnmA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 
-        <p>I led a team to design, prototype, and verify a turnkey aerial imaging system for the Georgia Tech Senior Capstone Design challenge in Spring 2016. The project sponsor, the Brown Water Group, is currently conducting sanitation studies in informal communities in Maputo, Mozambique, but was unable to calculate the population densities of the studied communities, an essential measure for their study. While the Brown Group is currently able to measure the population of the communities via a census, they are unable to use either ground-based or satellite-based methods to measure compound areas, the land area of individual homes.</p>
+		<p>I led a team to design, prototype, and verify a turnkey aerial imaging system for the Georgia Tech Senior Capstone Design challenge in Spring 2016. The project sponsor, the Brown Water Group, is currently conducting sanitation studies in informal communities in Maputo, Mozambique, but was unable to calculate the population densities of the studied communities, an essential measure for their study. While the Brown Group is currently able to measure the population of the communities via a census, they are unable to use either ground-based or satellite-based methods to measure compound areas, the land area of individual homes.</p>
 
-        <p>In this project, my team developed a drone-based imaging system that can quickly and accurately create a composite aerial photo of the area being studied from which compound area may be measured. The delivered system includes a hardware flight system based on a 3DR IRIS+ and uses a GoPro Hero4 to capture a large number of images that may be stitched together to create a composite photo. Further, we developed a software suite that allows users to plan flights over a desired area, stitch large numbers of captured photos into one high-resolution composite photo, and accurately measure area from the composite photo.</p>
+		<p>In this project, my team developed a drone-based imaging system that can quickly and accurately create a composite aerial photo of the area being studied from which compound area may be measured. The delivered system includes a hardware flight system based on a 3DR IRIS+ and uses a GoPro Hero4 to capture a large number of images that may be stitched together to create a composite photo. Further, we developed a software suite that allows users to plan flights over a desired area, stitch large numbers of captured photos into one high-resolution composite photo, and accurately measure area from the composite photo.</p>
 
-        <img class="img-full-width" src="project-pages/capstone-map.jpg" alt="Illustration of the stitching algorithm assembling a map from a grid of images.">
+		<img class="img-full-width" src="project-pages/capstone-map.jpg" alt="Illustration of the stitching algorithm assembling a map from a grid of images.">
 
-        <img class="img-full-width" src="project-pages/capstone-app.jpg" alt="Screenshot of app used to plan the mapping task">
+		<img class="img-full-width" src="project-pages/capstone-app.jpg" alt="Screenshot of app used to plan the mapping task">
 
-        <p>We verified our system by flying it at Cobb County RC field. The drone system followed a series of user-generated flight paths and demonstrated a variety of safety features such as auto-landing and come-home commands to ensure the system will remain under the control of the operator in emergency situations. In addition, the image-stitching and area measurement software was verified using sample images generated from the Google Maps aerial photography dataset.</p>
+		<p>We verified our system by flying it at Cobb County RC field. The drone system followed a series of user-generated flight paths and demonstrated a variety of safety features such as auto-landing and come-home commands to ensure the system will remain under the control of the operator in emergency situations. In addition, the image-stitching and area measurement software was verified using sample images generated from the Google Maps aerial photography dataset.</p>
 
-        <p>To learn more about the project, <a href="project-pages/capstone-report.pdf" download target="_blank">read our report</a>. All of our software is open source on <a aria-label="GitHub repository" rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
+		<p>To learn more about the project, <a href="project-pages/capstone-report.pdf" download target="_blank">read our report</a>. All of our software is open source on <a aria-label="GitHub repository" rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
 
-        <img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
-        <div class="gallery">
-            <a href="project-pages/capstone-gal00.jpg" target="_blank">
-                <img src="project-pages/capstone-gal00.jpg" alt="A flying quadcopter being observed by a group of people">
-            </a>
-            <a href="project-pages/capstone-gal01.jpg" target="_blank">
-                <img src="project-pages/capstone-gal01.jpg" alt="MAPSAN team picture">
-            </a>
-            <a href="project-pages/capstone-gal02.jpg" target="_blank">
-                <img src="project-pages/capstone-gal02.jpg" alt="Working on computer code">
-            </a>
-            <a href="project-pages/capstone-gal03.jpg" target="_blank">
-                <img src="project-pages/capstone-gal03.jpg" alt="Quadcopter in the sky">
-            </a>
-            <a href="project-pages/capstone-gal04.jpg" target="_blank">
-                <img src="project-pages/capstone-gal04.jpg" alt="People discussing near a quadcopter">
-            </a>
-            <a href="project-pages/capstone-gal05.jpg" target="_blank">
-                <img src="project-pages/capstone-gal05.jpg" alt="Quadcopter on the ground">
-            </a>
-            <a href="project-pages/capstone-gal06.jpg" target="_blank">
-                <img src="project-pages/capstone-gal06.jpg" alt="MAPSAN teammate smiling next to the quadcopter">
-            </a>
-            <a href="project-pages/capstone-gal07.jpg" target="_blank">
-                <img src="project-pages/capstone-gal07.jpg" alt="Multiple people working on computer code">
-            </a>
-            <a href="project-pages/capstone-gal08.jpg" target="_blank">
-                <img src="project-pages/capstone-gal08.jpg" alt="Quadcopter being piloted">
-            </a>
-            <a href="project-pages/capstone-gal09.jpg" target="_blank">
-                <img src="project-pages/capstone-gal09.jpg" alt="Computer running code">
-            </a>
-            <a href="project-pages/capstone-gal10.jpg" target="_blank">
-                <img src="project-pages/capstone-gal10.jpg" alt="CAD of the quadcopter">
-            </a>
-        </div>
-    </main>
+		<img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
+		<div class="gallery">
+			<a href="project-pages/capstone-gal00.jpg" target="_blank">
+				<img src="project-pages/capstone-gal00.jpg" alt="A flying quadcopter being observed by a group of people">
+			</a>
+			<a href="project-pages/capstone-gal01.jpg" target="_blank">
+				<img src="project-pages/capstone-gal01.jpg" alt="MAPSAN team picture">
+			</a>
+			<a href="project-pages/capstone-gal02.jpg" target="_blank">
+				<img src="project-pages/capstone-gal02.jpg" alt="Working on computer code">
+			</a>
+			<a href="project-pages/capstone-gal03.jpg" target="_blank">
+				<img src="project-pages/capstone-gal03.jpg" alt="Quadcopter in the sky">
+			</a>
+			<a href="project-pages/capstone-gal04.jpg" target="_blank">
+				<img src="project-pages/capstone-gal04.jpg" alt="People discussing near a quadcopter">
+			</a>
+			<a href="project-pages/capstone-gal05.jpg" target="_blank">
+				<img src="project-pages/capstone-gal05.jpg" alt="Quadcopter on the ground">
+			</a>
+			<a href="project-pages/capstone-gal06.jpg" target="_blank">
+				<img src="project-pages/capstone-gal06.jpg" alt="MAPSAN teammate smiling next to the quadcopter">
+			</a>
+			<a href="project-pages/capstone-gal07.jpg" target="_blank">
+				<img src="project-pages/capstone-gal07.jpg" alt="Multiple people working on computer code">
+			</a>
+			<a href="project-pages/capstone-gal08.jpg" target="_blank">
+				<img src="project-pages/capstone-gal08.jpg" alt="Quadcopter being piloted">
+			</a>
+			<a href="project-pages/capstone-gal09.jpg" target="_blank">
+				<img src="project-pages/capstone-gal09.jpg" alt="Computer running code">
+			</a>
+			<a href="project-pages/capstone-gal10.jpg" target="_blank">
+				<img src="project-pages/capstone-gal10.jpg" alt="CAD of the quadcopter">
+			</a>
+		</div>
+	</main>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
