--- a/eqr.html
+++ b/eqr.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>Emergency QR</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Emergency QR">
-    <link rel="canonical" href="https://rupumped.github.io/eqr.html">
+	<link rel="canonical" href="https://rupumped.github.io/eqr.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,47 +23,47 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
-            <h1>​Emergency QR</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
+			<h1>​Emergency QR</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">HTML</div>
-                <div class="bullet"></div>
-                <div class="skill">CSS</div>
-                <div class="bullet"></div>
-                <div class="skill">JavaScript</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">HTML</div>
+				<div class="bullet"></div>
+				<div class="skill">CSS</div>
+				<div class="bullet"></div>
+				<div class="skill">JavaScript</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <p>It's important to keep certain medical information readily available in case of emergencies. The worst-case scenario of an emergency ambulance response is that the crew knows nothing about the patient. If the patient is unresponsive, emergency responders can only try their best to treat life-threatening signs and symptoms. In an emergency, information can make the difference between life and death.</p>
+		<p>It's important to keep certain medical information readily available in case of emergencies. The worst-case scenario of an emergency ambulance response is that the crew knows nothing about the patient. If the patient is unresponsive, emergency responders can only try their best to treat life-threatening signs and symptoms. In an emergency, information can make the difference between life and death.</p>
 
-        <p>People with allergies or medical conditions that affect emergency medical response need to keep information about their condition easily accessible. Some keep emergency medical information forms like this one, but lengthy paper forms are a hassle to keep accessible when you leave your home. Patients can fit some forms into a wallet, but the cards need to come in packs to contain all of the necessary information and are filled with miniscule font. Others wear medical ID jewelry like these, but jewelry is expensive and often lacks enough space for everything emergency responders need. There is currently no good solution to communicate all of an unconscious patient's relevant medical information to emergency responders.</p>
-            
-        <p>EQR solves this problem. More than 95 percent of respondents look for a medical ID during emergencies. By encoding all of your medical information into a compact QR code, EQR empowers patients to communicate vital medical information to emergency responders even while unconscious. When checking a patient for ID, responders can easily scan a patient's EQR code with a smartphone and have immediate access to all relevant information. EQR codes can be placed on a single wallet card with room to spare, attached to a child's backpack, or set as a smartphone lock screen.</p>
-            
-        <p>EQR codes are 100% secure. Unlike other medical records services and apps, EQR does not store your information on any server. Instead, EQR leverages physical layer security, encoding all of the information you enter into the EQR code itself. The only way to access your medical information is to scan the EQR.</p>
+		<p>People with allergies or medical conditions that affect emergency medical response need to keep information about their condition easily accessible. Some keep emergency medical information forms like this one, but lengthy paper forms are a hassle to keep accessible when you leave your home. Patients can fit some forms into a wallet, but the cards need to come in packs to contain all of the necessary information and are filled with miniscule font. Others wear medical ID jewelry like these, but jewelry is expensive and often lacks enough space for everything emergency responders need. There is currently no good solution to communicate all of an unconscious patient's relevant medical information to emergency responders.</p>
+			
+		<p>EQR solves this problem. More than 95 percent of respondents look for a medical ID during emergencies. By encoding all of your medical information into a compact QR code, EQR empowers patients to communicate vital medical information to emergency responders even while unconscious. When checking a patient for ID, responders can easily scan a patient's EQR code with a smartphone and have immediate access to all relevant information. EQR codes can be placed on a single wallet card with room to spare, attached to a child's backpack, or set as a smartphone lock screen.</p>
+			
+		<p>EQR codes are 100% secure. Unlike other medical records services and apps, EQR does not store your information on any server. Instead, EQR leverages physical layer security, encoding all of the information you enter into the EQR code itself. The only way to access your medical information is to scan the EQR.</p>
 
-        <p>To learn more about the project and make yourself an EQR for free, visit the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project homepage</a>.</p>
-    </main>
+		<p>To learn more about the project and make yourself an EQR for free, visit the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project homepage</a>.</p>
+	</main>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
