--- a/kidney.html
+++ b/kidney.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<title>15 Steps to Donate a Kidney</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.">
