--- a/teachbot.html
+++ b/teachbot.html
@@ -2,115 +2,114 @@
 <html lang="en">
 <head>
 	<title>TeachBot</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="TeachBot: An Education System for Workforce Development">
-    <link rel="canonical" href="https://rupumped.github.io/teachbot.html">
+	<link rel="canonical" href="https://rupumped.github.io/teachbot.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
-    <header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+	<header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
-            <h1>TeachBot</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
+			<h1>TeachBot</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">Robotics & Control</div>
-                <div class="bullet"></div>
-                <div class="skill">Statistics</div>
-                <div class="bullet"></div>
-                <div class="skill">Advanced Manufacturing</div>
-                <div class="bullet"></div>
-                <div class="skill">JavaScript</div>
-                <div class="bullet"></div>
-                <div class="skill">Python</div>
-                <div class="bullet"></div>
-                <div class="skill">HTML/CSS</div>
-                <div class="bullet"></div>
-                <div class="skill">Human-Subject Testing</div>
-                <div class="bullet"></div>
-                <div class="skill">Curriculum Design</div>
-                <div class="bullet"></div>
-                <div class="skill">CAD</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Robotics & Control</div>
+				<div class="bullet"></div>
+				<div class="skill">Statistics</div>
+				<div class="bullet"></div>
+				<div class="skill">Advanced Manufacturing</div>
+				<div class="bullet"></div>
+				<div class="skill">JavaScript</div>
+				<div class="bullet"></div>
+				<div class="skill">Python</div>
+				<div class="bullet"></div>
+				<div class="skill">HTML/CSS</div>
+				<div class="bullet"></div>
+				<div class="skill">Human-Subject Testing</div>
+				<div class="bullet"></div>
+				<div class="skill">Curriculum Design</div>
+				<div class="bullet"></div>
+				<div class="skill">CAD</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <p>Working under the direction of Professor Harry Asada at MIT, I designed, developed, tested, and deployed a robotic workforce training solution for collaborative manufacturing.</p>
+		<p>Working under the direction of Professor Harry Asada at MIT, I designed, developed, tested, and deployed a robotic workforce training solution for collaborative manufacturing.</p>
 
-        <div class="centered section">
-            <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/qiIvc157bzc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+		<div class="centered section">
+			<iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/qiIvc157bzc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 
-        <section>
-            <h2>Motivation</h2>
-            <p>By 2025, Deloitte and The Manufacturing Institute estimates nearly 3.5 million manufacturing jobs will be needed in the US, but only 1.5 million are expected to be filled. The remaining 2 million jobs will likely not be realized due to a lack of skilled workers trained to work with robots. Despite this dearth in skilled labor, the International Federation of Robotics found that growth in automated manufacturing industries is accelerating. Other countries, particularly those in Europe, fill the gap between labor supply and demand with robust apprenticeship programs that the US notoriously lacks, and this leads domestic manufacturers to outsource system integration to consulting firms. This is both costly and short-term: if the manufacturer needs to tweak or repair the already-integrated automated system, all of the knowledge necessary to do so is external to the organization, so the manufacturer must pay the consultants again to return and modify the system. This absurd process leads us to ask, "Why can't manufacturing workers themselves be trained to perform system integration tasks?"</p>
-            <p>Because I have never worked on a manufacturing line myself, I found customer interviews with the small and medium manufacturing firms we are targeting, extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
-            <ol>
-                <li><b>Teach workers necessary skills</b> like feedback control,</li>
-                <li><b>Enable workers to perform real tasks</b> like pick-and-place operations,</li>
-                <li><b>Make learners feel engaged</b>, and</li>
-                <li><b>Be priced appropriately</b> for the (generally smaller) manufacturers who need skilled workers.</li>
-            </ol>
-        </section>
+		<section>
+			<h2>Motivation</h2>
+			<p>By 2025, Deloitte and The Manufacturing Institute estimates nearly 3.5 million manufacturing jobs will be needed in the US, but only 1.5 million are expected to be filled. The remaining 2 million jobs will likely not be realized due to a lack of skilled workers trained to work with robots. Despite this dearth in skilled labor, the International Federation of Robotics found that growth in automated manufacturing industries is accelerating. Other countries, particularly those in Europe, fill the gap between labor supply and demand with robust apprenticeship programs that the US notoriously lacks, and this leads domestic manufacturers to outsource system integration to consulting firms. This is both costly and short-term: if the manufacturer needs to tweak or repair the already-integrated automated system, all of the knowledge necessary to do so is external to the organization, so the manufacturer must pay the consultants again to return and modify the system. This absurd process leads us to ask, "Why can't manufacturing workers themselves be trained to perform system integration tasks?"</p>
+			<p>Because I have never worked on a manufacturing line myself, I found customer interviews with the small and medium manufacturing firms we are targeting, extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
+			<ol>
+				<li><b>Teach workers necessary skills</b> like feedback control,</li>
+				<li><b>Enable workers to perform real tasks</b> like pick-and-place operations,</li>
+				<li><b>Make learners feel engaged</b>, and</li>
+				<li><b>Be priced appropriately</b> for the (generally smaller) manufacturers who need skilled workers.</li>
+			</ol>
+		</section>
 
-        <section>
-            <h2>Solution</h2>
-            <p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
-            <div class="centered">
-                <img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
-            </div>
-            <p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
-        </section>
+		<section>
+			<h2>Solution</h2>
+			<p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
+			<div class="centered">
+				<img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
+			</div>
+			<p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
+		</section>
 
-        <section>
-            <h2>Evaluation</h2>
-            <p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
-            <div class="centered">
-                <img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
-            </div>
-            <p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
-        </section>
+		<section>
+			<h2>Evaluation</h2>
+			<p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
+			<div class="centered">
+				<img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
+			</div>
+			<p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
+		</section>
 
-        <section>
-            <h2>Moving Forward</h2>
-            <p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
-            <p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
-            <p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
-        </section>
-    </main>
-    
+		<section>
+			<h2>Moving Forward</h2>
+			<p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
+			<p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
+			<p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
+		</section>
+	</main>
+	
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
