--- a/tinynets.html
+++ b/tinynets.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
 	<title>TinyNets</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="TinyNets: ​A Lightweight Networking Strategy for Robotic Control Systems">
-    <link rel="canonical" href="https://rupumped.github.io/tinynets.html">
+	<link rel="canonical" href="https://rupumped.github.io/tinynets.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -24,88 +23,88 @@
 </head>
 <body>
 	<header>
-        <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn">
-        <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT ME</a></li>
-            <li><a href="selected-work.html">SELECTED WORK</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="service.html">SERVICE</a></li>
-        </ul>
-    </header>
+		<div id="name">NICHOLAS S SELBY</div>
+		<input class="menu-btn" type="checkbox" id="menu-btn">
+		<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
+		<ul class="menu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT ME</a></li>
+			<li><a href="selected-work.html">SELECTED WORK</a></li>
+			<li><a href="blog.html">BLOG</a></li>
+			<li><a href="service.html">SERVICE</a></li>
+		</ul>
+	</header>
 
-    <main>
-        <div class="cover section">
-            <img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
-            <h1 id="tinynets-title">​TinyNets: ​Lightweight Networking for Control Systems</h1>
-        </div>
+	<main>
+		<div class="cover section">
+			<img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
+			<h1 id="tinynets-title">​TinyNets: ​Lightweight Networking for Control Systems</h1>
+		</div>
 
-        <section id="skills-demonstrated">
-            <h2>Skills Demonstrated</h2>
-            <div class="skills">
-                <div class="skill">Networking</div>
-                <div class="bullet"></div>
-                <div class="skill">Artificial Intelligence</div>
-                <div class="bullet"></div>
-                <div class="skill">PCB Design</div>
-                <div class="bullet"></div>
-                <div class="skill">HTML/CSS/JavaScript</div>
-                <div class="bullet"></div>
-                <div class="skill">Distributed Algorithms</div>
-                <div class="bullet"></div>
-                <div class="skill">C/C++</div>
-            </div>
-        </section>
+		<section id="skills-demonstrated">
+			<h2>Skills Demonstrated</h2>
+			<div class="skills">
+				<div class="skill">Networking</div>
+				<div class="bullet"></div>
+				<div class="skill">Artificial Intelligence</div>
+				<div class="bullet"></div>
+				<div class="skill">PCB Design</div>
+				<div class="bullet"></div>
+				<div class="skill">HTML/CSS/JavaScript</div>
+				<div class="bullet"></div>
+				<div class="skill">Distributed Algorithms</div>
+				<div class="bullet"></div>
+				<div class="skill">C/C++</div>
+			</div>
+		</section>
 
-        <div class="separator"></div>
+		<div class="separator"></div>
 
-        <section>
-            <h2>Motivation</h2>
-            <p>The field of Networked Control Systems, or NCS, is unique from many other networking fields. NCS refers to any application where many devices are linked together to perform control of a physical system. They are common in robotics and avionics, where many sensors and actuators work together to perform a common goal (i.e. walking, stabilization, etc.), and in manufacturing, where machine degrees of freedom are linked to close positioning control loops, and where multiple machines are linked to coordinate material handling and production scheduling.</p>
-            <p>Critically,</p>
-            <ul>
-                <li>In NCS, <b>total throughput is valued but not a key metric.</b></li>
-                <li>Rather, message sizes are typically very small (between three and fifty bytes) and message delay time is the critical metric. Often, messages are only one packet in length.</li>
-                <li><b>Determinism in Message Delivery Time is critical.</b> Systems must guarantee that certain control loops 'close' within a defined set of time less they become unstable.</li>
-                <li><b>Robustness is critical.</b> NCS should not contain any Single Points of Failure</li>
-                <li><b>Statelessness is critical.</b> NCS should not pause operation under any circumstances to re-converge on routing solutions, as this adds fatal indeterminism to message delivery.</li>
-            </ul>
-            <p>State of the art Networked Control Systems employ simple Switched Ethernet, or proprietary versions thereof, in order to route traffic. Hardware endpoints are fitted with an Ethernet PHY and are connected in a heirarchy of switches. Ethernet MAC addresses are used, and all routing takes place on Layer 2.</p>
-            <p>Switched Ethernet has become the industry standard because of its relative interoperability and high speeds. Critically, the last 10 years has seen Switched Ethernet take up large portions of market share because it solves many problems associated with Fieldbusses. Most importantly, adding devices to a Fieldbus always caused a linear increase in message delivery time, as is not the case with Switched Ethernet.</p>
-            <p>However, Switched Ethernet was not originally developed for Networked Control Systems, and many in industry have pointed out that it will not fulfill customer needs in the near- and long-term future.</p>
-            <p>In Switched Ethernet, because a Minimum Spanning Tree is created, nodes in a particular layer compete for link-time on the layer above. Message delay time increases linearly with the probability that peers are transmitting at the same time, and with the number of peers on that layer.</p>
-            <p>In addition, Switched Ethernet contains Single Points of Failure, where a broken link or switch means that the network must re-run the Spanning Tree Protocol algorithm - a process that often takes seconds. Because Switched Ethernet graphs are highly heirarchical, it is often the case that failure on a single link can cause entire sections of the network to fail, or become unreachable.</p>
-            <p>Device endpoints in NCS are scaling down in size and up in number. Requiring that each endpoint carries with it an RJ45 Magnetic Jack and Ethernet PHY is dubious, and sets a lower limit on the size and complexity that sensors and actuators in an NCS must possess.</p>
-            <p>Switched Ethernet is non-programmable. I.E. Switches are black-box IC's and do not allow systems designers to arbitrarily add functions to a system on the networking layer. For example, many NCS designers would like to implement message priorities and load balancing, but this is not possible on Layer 2.</p>
-            <p>An alternative to Ethernet which could optimize the above metrics would have massive implications for micro-robotics, avionics, and open-source reconfigurable hardware systems.</p>
-        </section>
+		<section>
+			<h2>Motivation</h2>
+			<p>The field of Networked Control Systems, or NCS, is unique from many other networking fields. NCS refers to any application where many devices are linked together to perform control of a physical system. They are common in robotics and avionics, where many sensors and actuators work together to perform a common goal (i.e. walking, stabilization, etc.), and in manufacturing, where machine degrees of freedom are linked to close positioning control loops, and where multiple machines are linked to coordinate material handling and production scheduling.</p>
+			<p>Critically,</p>
+			<ul>
+				<li>In NCS, <b>total throughput is valued but not a key metric.</b></li>
+				<li>Rather, message sizes are typically very small (between three and fifty bytes) and message delay time is the critical metric. Often, messages are only one packet in length.</li>
+				<li><b>Determinism in Message Delivery Time is critical.</b> Systems must guarantee that certain control loops 'close' within a defined set of time less they become unstable.</li>
+				<li><b>Robustness is critical.</b> NCS should not contain any Single Points of Failure</li>
+				<li><b>Statelessness is critical.</b> NCS should not pause operation under any circumstances to re-converge on routing solutions, as this adds fatal indeterminism to message delivery.</li>
+			</ul>
+			<p>State of the art Networked Control Systems employ simple Switched Ethernet, or proprietary versions thereof, in order to route traffic. Hardware endpoints are fitted with an Ethernet PHY and are connected in a heirarchy of switches. Ethernet MAC addresses are used, and all routing takes place on Layer 2.</p>
+			<p>Switched Ethernet has become the industry standard because of its relative interoperability and high speeds. Critically, the last 10 years has seen Switched Ethernet take up large portions of market share because it solves many problems associated with Fieldbusses. Most importantly, adding devices to a Fieldbus always caused a linear increase in message delivery time, as is not the case with Switched Ethernet.</p>
+			<p>However, Switched Ethernet was not originally developed for Networked Control Systems, and many in industry have pointed out that it will not fulfill customer needs in the near- and long-term future.</p>
+			<p>In Switched Ethernet, because a Minimum Spanning Tree is created, nodes in a particular layer compete for link-time on the layer above. Message delay time increases linearly with the probability that peers are transmitting at the same time, and with the number of peers on that layer.</p>
+			<p>In addition, Switched Ethernet contains Single Points of Failure, where a broken link or switch means that the network must re-run the Spanning Tree Protocol algorithm - a process that often takes seconds. Because Switched Ethernet graphs are highly heirarchical, it is often the case that failure on a single link can cause entire sections of the network to fail, or become unreachable.</p>
+			<p>Device endpoints in NCS are scaling down in size and up in number. Requiring that each endpoint carries with it an RJ45 Magnetic Jack and Ethernet PHY is dubious, and sets a lower limit on the size and complexity that sensors and actuators in an NCS must possess.</p>
+			<p>Switched Ethernet is non-programmable. I.E. Switches are black-box IC's and do not allow systems designers to arbitrarily add functions to a system on the networking layer. For example, many NCS designers would like to implement message priorities and load balancing, but this is not possible on Layer 2.</p>
+			<p>An alternative to Ethernet which could optimize the above metrics would have massive implications for micro-robotics, avionics, and open-source reconfigurable hardware systems.</p>
+		</section>
 
-        <section>
-            <h2>Solution</h2>
-            <p>TinyNets is a networking strategy for distributed robotic control systems developed by my team and me in MIT's graduate computer science networking course. Our key contributions are:</p>
-            <ul>
-                <li>A strategy for stateless multipath routing that increases message delivery time determinism and network robustness.</li>
-                <li>A real-time cost function, using next-hop buffer size (i.e. busyness metric) as well as historical hop-count for per-packet dynamic re-routing, that increases packet delivery-time determinism.</li>
-                <li>A software-defined network architecture for arbitrary implementation in any embedded system, where computing, physical space, and time is limited.</li>
-            </ul>
-            <p>At a high level, our protocol:<img class="img-right" src="project-pages/tinynets-hardware.jpg" alt="Our algorithm running on real hardware"></p>
-            <ul>
-                <li>Implements a multipath distance-vector routing protocol</li>
-                <li>Performs real-time route selection</li>
-                <li>Does automatic, convergence-free route discovery and optimization</li>
-                <li>Is robust in the face of link losses and router failures</li>
-                <li>Can be arbitrarily implemented in software on numerous microcontrollers</li>
-            </ul>
-            <p>Below is an illustration of TinyNets on a simulated network:</p>
-            <div class="centered section">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4Rnn4MHgGAw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p>To learn more about the project, <a href="project-pages/tinynets-report.pdf" target="_blank" download>read our paper</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
-        </section>
-    </main>
-    
+		<section>
+			<h2>Solution</h2>
+			<p>TinyNets is a networking strategy for distributed robotic control systems developed by my team and me in MIT's graduate computer science networking course. Our key contributions are:</p>
+			<ul>
+				<li>A strategy for stateless multipath routing that increases message delivery time determinism and network robustness.</li>
+				<li>A real-time cost function, using next-hop buffer size (i.e. busyness metric) as well as historical hop-count for per-packet dynamic re-routing, that increases packet delivery-time determinism.</li>
+				<li>A software-defined network architecture for arbitrary implementation in any embedded system, where computing, physical space, and time is limited.</li>
+			</ul>
+			<p>At a high level, our protocol:<img class="img-right" src="project-pages/tinynets-hardware.jpg" alt="Our algorithm running on real hardware"></p>
+			<ul>
+				<li>Implements a multipath distance-vector routing protocol</li>
+				<li>Performs real-time route selection</li>
+				<li>Does automatic, convergence-free route discovery and optimization</li>
+				<li>Is robust in the face of link losses and router failures</li>
+				<li>Can be arbitrarily implemented in software on numerous microcontrollers</li>
+			</ul>
+			<p>Below is an illustration of TinyNets on a simulated network:</p>
+			<div class="centered section">
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4Rnn4MHgGAw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<p>To learn more about the project, <a href="project-pages/tinynets-report.pdf" target="_blank" download>read our paper</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
+		</section>
+	</main>
+	
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
