rm bad characters

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 					The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
 				</div>
 				<div id="quote-citation">
-					― Horace Walpole
+					— Horace Walpole
 				</div>
 			</div>
 		</div>
