--- a/capstone.html
+++ b/capstone.html
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/capstone-cover.jpg" alt="A drone flying in the sky">
-			<h1>​Aerial Mapping System for Urban Environments</h1>
+			<h1>Aerial Mapping System for Urban Environments</h1>
 		</div>
 
 		<section id="skills-demonstrated">
