--- a/eqr.html
+++ b/eqr.html
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
-			<h1>​Emergency QR</h1>
+			<h1>Emergency QR</h1>
 		</div>
 
 		<section id="skills-demonstrated">
