--- a/kidney.html
+++ b/kidney.html
@@ -225,7 +225,7 @@
             <p>A few days later, I got a call from Nurse Emily letting me know that I had been reapproved for donation. She emailed me three forms to sign:</p>
             <ul>
                 <li>Release of Information allowing NKR to get access to my medical records</li>
-                <li>Advanced Donation Program Informed Consent Intended Donor form. This form included space for five immediate family members to be designated “voucher holders,” so that if any of them ever need a kidney, they can jump the line. It's a cool alternative to designating that you want someone in particular to get a kidney because they need one ASAP. Here's what the form looks like:</li>
+                <li>Advanced Donation Program Informed Consent Intended Donor form. This form included space for five immediate family members to be designated "voucher holders," so that if any of them ever need a kidney, they can jump the line. It's a cool alternative to designating that you want someone in particular to get a kidney because they need one ASAP. Here's what the form looks like:</li>
             </ul>
             <img class="img-full-width" src="blog-posts/kidney-vouchers.jpg" alt="Table with sections to write the names, dates of birth, and relationship of individuals to whom you want to give kidney vouchers">
             <ul>
