--- a/lowtemp.html
+++ b/lowtemp.html
@@ -60,7 +60,7 @@
 
 		<div class="separator"></div>
 
-		<p>While working as a researcher at Sandia National Laboratories under the direction of Dr. Wei Pan, I designed, constructed, and characterized a biaxial sample rotation stage for use in cryogenic systems for orientation-dependent studies of anisotropic electronic transport phenomena at low temperatures and high magnetic fields.​​</p>
+		<p>While working as a researcher at Sandia National Laboratories under the direction of Dr. Wei Pan, I designed, constructed, and characterized a biaxial sample rotation stage for use in cryogenic systems for orientation-dependent studies of anisotropic electronic transport phenomena at low temperatures and high magnetic fields.</p>
 
 		<section>
 			<h2>Motivation</h2>
@@ -103,7 +103,7 @@
 				<tr>
 					<td>Resolution</td>
 					<td>0.01°</td>
-					<td>0.01​°</td>
+					<td>0.01°</td>
 				</tr>
 			</table>
 			<p>My design was similar to that of a puppet. High precision linear actuators outside the tank raised and lowered strings which, in turn, rotated the sample. The design was entirely machined out of stainless steel and brass so as to withstand high magnetic fields and avoid superconductivity at low temperatures. Because the strings were the only coupling between the sample stage and the rest of the device, the sample stage was effectively thermally isolated from the heat being generated outside the tank, allowing the device to work at extremely low temperatures. Finally, just like raising one arm on a puppet does not affect the other arm or legs, dual linear actuators could adjust the sample orientation about both axes independently.</p>
