--- a/ndte.html
+++ b/ndte.html
@@ -44,7 +44,7 @@
 		<section id="skills-demonstrated">
 			<h2>Skills Demonstrated</h2>
 			<div class="skills">
-				<div class="skill">​Signal Processing</div>
+				<div class="skill">Signal Processing</div>
 				<div class="bullet"></div>
 				<div class="skill">MATLAB</div>
 				<div class="bullet"></div>
