--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -120,7 +120,7 @@
 
 		<section class="even">
 			<h2>Problems Using a Hand-Held or Mounted Microphone</h2>
-			<p>With any microphone, you need to rehearse with it before performing. Most work best when the head of the microphone is held approximately eight inches from the lips, about the distance from the tip of your thumb to the tip of your pinky while signing the ASL letter “Y”. For best results, hold the head of the microphone 30 degrees down from the horizontal.</p>
+			<p>With any microphone, you need to rehearse with it before performing. Most work best when the head of the microphone is held approximately eight inches from the lips, about the distance from the tip of your thumb to the tip of your pinky while signing the ASL letter "Y". For best results, hold the head of the microphone 30 degrees down from the horizontal.</p>
 		</section>
 
 		<section class="odd">
