--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 				</ul>
 				Academic Service:
 				<ul>
-					<li>MIT Graduate Student Council (2020⁠–2021)</li>
-					<li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group (2020⁠–2021)</li>
+					<li>MIT Graduate Student Council (2020–2021)</li>
+					<li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group (2020–2021)</li>
 					<li>University System of Georgia China Outreach Program (2014)</li>
 				</ul>
 				Journal Referee [<a rel="external" href="https://www.webofscience.com/wos/author/record/1974564" target="_blank">Web of Science</a>]:
