--- a/tinynets.html
+++ b/tinynets.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- SEO Description-->
-	<meta name="description" content="TinyNets: ​A Lightweight Networking Strategy for Robotic Control Systems">
+	<meta name="description" content="TinyNets: A Lightweight Networking Strategy for Robotic Control Systems">
 	<link rel="canonical" href="https://rupumped.github.io/tinynets.html">
 
 	<!-- Favicon -->
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
-			<h1 id="tinynets-title">​TinyNets: ​Lightweight Networking for Control Systems</h1>
+			<h1 id="tinynets-title">TinyNets: Lightweight Networking for Control Systems</h1>
 		</div>
 
 		<section id="skills-demonstrated">
